fixed container height being too long

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #1F1F1F;
-  max-height: 750px;
+  max-height: 650px;
   max-width: 380px;
   height: 90%;
   width: 90%;
